chore: migration from java 17 to java 8 (#7)
* chore: reload packages for java8

* refactor: replace new lambda and factory method